--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,24 +24,28 @@
     <TextView
         android:id="@+id/numbers"
         style="@style/CategoryStyle"
+        android:layout_height="@dimen/list_item_heigth"
         android:background="@color/category_numbers"
         android:text="@string/category_numbers" />
 
     <TextView
         android:id="@+id/family"
         style="@style/CategoryStyle"
+        android:layout_height="@dimen/list_item_heigth"
         android:background="@color/category_family"
         android:text="@string/category_family" />
 
     <TextView
         android:id="@+id/colors"
         style="@style/CategoryStyle"
+        android:layout_height="@dimen/list_item_heigth"
         android:background="@color/category_colors"
         android:text="@string/category_colors" />
 
     <TextView
         android:id="@+id/phrases"
         style="@style/CategoryStyle"
+        android:layout_height="@dimen/list_item_heigth"
         android:background="@color/category_phrases"
         android:text="@string/category_phrases" />
 
